# bloatr

./: .gitignore  Makefile  README.md  demo.tape  pyproject.toml
docs/: v2-roadmap.md
src/bloatr/: __main__.py  app.py  cleaner.py  cli.py  locations.py  models.py  scanner.py  sizes.py
tests/: test_cleaner.py  test_locations.py  test_scanner.py  test_sizes.py
